fix center align in index.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -263,6 +263,8 @@ a:hover{
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    display: flex;
+    justify-content: center;
 }
 
 .opaque{
@@ -277,7 +279,6 @@ a:hover{
     width:300px;
     height:250px;
     top:150px;
-    right:500px;
     position: absolute;
 }
 
@@ -388,6 +389,11 @@ a:hover{
 }
 /* about section */
 
+.main-about-parent{
+    display: flex;
+    justify-content: center;
+}
+
 .main-about{
     width:800px;
     color:#425B58;
@@ -396,8 +402,7 @@ a:hover{
     border:solid 1px #425B58;
     border-radius:5px;
     position: relative;
-    left:300px;
-    top:40px;
+    margin-top:40px;
     padding:10px;
 }
 
@@ -414,11 +419,15 @@ a:hover{
 
 /* location and map */
 
+.location-parent{
+    display: flex;
+    justify-content: center;
+}
+
 .location{
     width:80%;
     position:relative;
-    left:180px;
-    top:60px;
+    margin-top:60px;
     background: #F0F1C5;
     text-align:center;
     color:#2e3f3d;
